<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mortgageValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/mortgage_label"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/interestValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/yearsValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/years_label"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestValue" />

    <EditText
        android:id="@+id/interestValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/interest_label"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yearsValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgageValue"
        tools:layout_constraintEnd_toEndOf="@id/mortgageValue" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="156dp"
        android:onClick="onCalculateEmiBtnClick"
        android:text="@string/calculate_button_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emiLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearsValue" />

    <TextView
        android:id="@+id/emiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="16dp"
        android:isScrollContainer="true"
        android:text="@string/emi_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emiValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emiValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:isScrollContainer="true"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
